--- a/hacktrud/hack/templates/hack/base_form.html
+++ b/hacktrud/hack/templates/hack/base_form.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Formalized model</title>
     <style>
         .container {
@@ -24,56 +24,56 @@
 </head>
 
 <body>
-    <div class="container mt-3 p-4">
+<div class="container mt-3 p-4">
 
-        <div class="card mb-3">
+    <div class="card mb-3">
+        <h5 class="card-header">Header</h5>
+        <div class="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum deleniti dolor doloremque earum enim fuga
+            illo
+            itaque iure maiores molestiae natus necessitatibus nesciunt, perferendis perspiciatis praesentium quam
+            quas
+            quisquam quo sint veritatis? Accusantium amet asperiores beatae blanditiis delectus explicabo facere in
+            inventore itaque molestias mollitia non quibusdam quidem quo reiciendis sed, sunt tenetur ut, vero!
+        </div>
+    </div>
+
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="card">
             <h5 class="card-header">Header</h5>
             <div class="card-body">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum deleniti dolor doloremque earum enim fuga
-                illo
-                itaque iure maiores molestiae natus necessitatibus nesciunt, perferendis perspiciatis praesentium quam
-                quas
-                quisquam quo sint veritatis? Accusantium amet asperiores beatae blanditiis delectus explicabo facere in
-                inventore itaque molestias mollitia non quibusdam quidem quo reiciendis sed, sunt tenetur ut, vero!
-            </div>
-        </div>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, modi!</p>
 
-        <form method="POST">
-            {% csrf_token %}
-            <div class="card">
-                <h5 class="card-header">Header</h5>
-                <div class="card-body">
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, modi!</p>
-
-                    <!-- Поле для URL -->
-                    <div class="form-group">
-                        <label for="exampleInputEmail1"></label>
-                        <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                            placeholder="Enter email"> -->
-                        {{ form.url }}
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                            else.</small>
+                <!-- Поле для URL -->
+                <div class="form-group">
+                    <label for="exampleInputEmail1"></label>
+                    <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        placeholder="Enter email"> -->
+                    {{ form.url }}
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                        else.</small>
+                </div>
+    {{ form.file }}
+                <!-- Поле для загрузки файла -->
+                <div class="input-group w-75">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Загрузить</span>
                     </div>
+                    <div class="custom-file">
+                        <input type="file" name="file" class="custom-file-input" id="inputGroupFile01">
 
-                    <!-- Поле для загрузки файла -->
-                    <div class="input-group w-75">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">Загрузить</span>
-                        </div>
-                        <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="inputGroupFile01">
-                            {{ form.file }}
-                            <label class="custom-file-label" for="inputGroupFile01">Выберите файл</label>
-                        </div>
+                        <label class="custom-file-label" for="inputGroupFile01">Выберите файл</label>
                     </div>
-
-                    <!-- Выбор модели  -->
-
-                <button type="submit" class="btn btn-primary mb-1 mt-4 w-25">Выполнить</button>
                 </div>
 
+                <!-- Выбор модели  -->
+                {{ form.modelVac }}
+                <button type="submit" class="btn btn-primary mb-1 mt-4 w-25">Выполнить</button>
             </div>
-        </form>
+
+        </div>
+    </form>
 </body>
 
 </html>
