--- a/hacktrud/hack/templates/hack/base_form.html
+++ b/hacktrud/hack/templates/hack/base_form.html
@@ -1,30 +1,17 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <title>Formalized model</title>
-    <style>
-        .container {
-            min-height: 200px;
-            border-radius: 1rem;
-            background-color: #1dc1da;
-        }
-
-        .card {
-            width: auto;
-            min-height: 100px;
-        }
-    </style>
 </head>
 
 <body>
-<div class="container mt-3 p-4">
+<div class="container my-4 p-4">
 
     <div class="card mb-3">
         <h5 class="card-header">Header</h5>
@@ -44,32 +31,52 @@
             <h5 class="card-header">Header</h5>
             <div class="card-body">
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, modi!</p>
-
+            
+                {% if form.errors %}
+                <div class="alert alert-danger">{{ error }}</div>
+                {% endif %}
                 <!-- Поле для URL -->
                 <div class="form-group">
-                    <label for="exampleInputEmail1"></label>
-                    <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email"> -->
+                    <label for="url">{{ form.url.label }}</label>
                     {{ form.url }}
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                        else.</small>
+                    <small id="url" class="form-text text-muted">{{ form.url.help_text }}</small>
                 </div>
-    {{ form.file }}
+            
+                <h6 class="my-4">или</h6>
+            
                 <!-- Поле для загрузки файла -->
-                <div class="input-group w-75">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Загрузить</span>
-                    </div>
-                    <div class="custom-file">
-                        <input type="file" name="file" class="custom-file-input" id="inputGroupFile01">
-
-                        <label class="custom-file-label" for="inputGroupFile01">Выберите файл</label>
+                <div class="form-group">
+                    <label for="url">{{ form.file.label }}</label>
+                    <div class="input-group w-100">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Загрузить</span>
+                        </div>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="file">
+                            {{ form.file }}
+                            <label class="custom-file-label" for="file">Выберите файл</label>
+                        </div>
                     </div>
                 </div>
-
                 <!-- Выбор модели  -->
-                {{ form.modelVac }}
-                <button type="submit" class="btn btn-primary mb-1 mt-4 w-25">Выполнить</button>
+                <div class="form-group my-4">
+                    <label for="url">{{ form.modelVac.label }}</label>
+                    <select class="form-control">
+                        {% for choice in form.modelVac %}
+                        {{ choice.choice_label }}
+                        <option>{{ choice.choice_label }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            
+                <div class="progress">
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0"
+                        aria-valuemax="100">25%
+                    </div>
+                </div>
+            
+            
+                <button type="submit" class="btn btn-success mb-1 mt-4 w-25">Выполнить</button>
             </div>
 
         </div>
